--- a/styles/globals.css
+++ b/styles/globals.css
@@ -118,4 +118,104 @@
   .text-white {
     color: white;
   }
+
+  .button-send {
+    font-family: inherit;
+    font-size: 17px;
+    background: royalblue;
+    color: white;
+    padding: 0.5em 1em;
+    padding-left: 0.9em;
+    display: flex;
+    align-items: center;
+    border: none;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: all 0.2s;
+    cursor: pointer;
+  }
+  
+  .button-send span {
+    display: block;
+    margin-left: 0.3em;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .button-send svg {
+    display: block;
+    transform-origin: center center;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .button-send:hover .svg-wrapper {
+    animation: fly-1 0.6s ease-in-out infinite alternate;
+  }
+  
+  .button-send:hover svg {
+    transform: translateX(1.47em) rotate(45deg) scale(1.1);
+  }
+  
+  .button-send:hover span {
+    transform: translateX(5em);
+  }
+  
+  .button-send:active {
+    transform: scale(0.95);
+  }
+  
+  @keyframes fly-1 {
+    from {
+      transform: translateY(0.1em);
+    }
+  
+    to {
+      transform: translateY(-0.1em);
+    }
+  }
+
+  .LinkedinBtn {
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: transparent;
+    position: relative;
+    border-radius: 7px;
+    cursor: pointer;
+    transition: all 0.3s;
+   color: white;
+  }
+  
+  .LinkedinPathW{
+    fill: rgb(255 255 255 / 1);
+  }
+  .LinkedinPathB{
+    fill: rgb(82 82 91 / 1);
+  }
+  .LinkedinBtn .LinkedinsvgContainer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    color: white;
+    backdrop-filter: blur(4px);
+    letter-spacing: 1px; /* Adjusted letter spacing */
+    border-radius: 10px;
+    transition: all 0.3s;
+    border: 1px solid rgba(156, 156, 156, 0.466);
+  }
+  
+  .LinkedinBtn:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
+
+  .LinkedinBtn:hover .LinkedinsvgContainer {
+    background-color: rgba(156, 156, 156, 0.466);
+  }
+  
+  
 }
