--- a/styles/globals.css
+++ b/styles/globals.css
@@ -239,6 +239,7 @@ html {
     padding:4px;
     margin:2px;
     box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+    font-size: 12px;
   }
 
   .alertStyle-warning {
@@ -257,6 +258,7 @@ html {
     padding:4px;
     margin:2px;
     box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+    font-size: 12px;
   }
 
   .alertStyle-error {
@@ -275,6 +277,7 @@ html {
     padding:4px;
     margin:2px;
     box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+    font-size: 12px;
   }
 
   @keyframes slideIn {
